# dark-souls-2d

./: .gitignore  CMakeLists.txt  MyShell.sh  README.md
cmake/: AddDependencies.cmake  CPM.cmake  SetCompileFlags.cmake
docs/: 设计文档.md
src/actor/: Actor.cpp  Actor.h  BaseActor.cpp  BaseActor.h  CameraActor.cpp  CameraActor.h  PlayerActor.cpp  PlayerActor.h  TileActor.cpp  TileActor.h
src/component/: Component.cpp  Component.h  MoveComponent.cpp  MoveComponent.h  RenderComponent.cpp  RenderComponent.h
src/core/: Core.cpp  Game.cpp  Game.h  Main.cpp  TileMap.cpp  TileMap.h
src/utils/: Enums.h  Math.cpp  Math.h  Random.cpp  Random.h  RenderOrder.h  Transform.cpp  Transform.h
tmp/: circle.py
